[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mostar"
version = "1.0.0"
description = "A streamlined hybrid assembly and polishing pipeline for ONT and Illumina reads, includes AMR profiling, functional annotation, ICE-detection & plasmid-borne AMR"
authors = [{name = "Nermin Zecic", email = "nermze@gmail.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"

[tool.setuptools]
script-files = ["mostar"]

[tool.setuptools.packages.find]
exclude = ["assets*", "Testrun*", "intermediate*", "logs*"]
