[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mostar"
version = "1.0.0"
description = "MOSTAR - Modular ONT-Short-read Taxonomic Assembly and Resistome-Evolution pipeline"
authors = [{name = "Nermin Zecic", email = "nermze@gmail.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"

[tool.setuptools]
script-files = ["mostar"]

[tool.setuptools.packages.find]
exclude = ["assets*", "Testrun*", "intermediate*", "logs*"]
